sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:23: error: illegal start of simple expression
  }
  ^AlgBubbleSort1:24: error: 'while' expected but '}' found.
} 
^