sort.basic.bubble.AlgBubbleSort1.scala.code



def bubbleSort()  {

  do 
  {

    var cpt = 0
    var lgr = getNombreValeurs()
    for (i <-0 to lgr)
    {
      if (!plusPetit(i,i+1))
      {
        echange(i,i+1)
        cpt+=1
      }
    }

    while (cpt!=0)

  }
}